changes bulk getter to post, improves error handling
